готов к проверке второго шага с запуском maven

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 #игнорировать каталог target
 target/
+
+#игнорировать рабочий дистрибутив мавен нужной версии. скрипт mvnw скачает его если нужно
+maven-wrapper.jar
+
+#игнорим старые версии плагинов и библиотек maven
+pom.xml.versionsBackup
