исправления второй шаг

--- a/pom.xml
+++ b/pom.xml
@@ -18,38 +18,39 @@
         <maven.compiler.release>11</maven.compiler.release>
 
         <!--Libs-->
-        <log4j-slf4j-impl.version>2.11.1</log4j-slf4j-impl.version>
+	<commons-math3.version>3.6.1</commons-math3.version>
+        <log4j-slf4j-impl.version>2.11.2</log4j-slf4j-impl.version>
         
         <!--Plugins-->
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-        <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
-        <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
+        <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
+        <jacoco-maven-plugin.version>0.8.3</jacoco-maven-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
-        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
-        <sonar-maven-plugin.version>2.7.1</sonar-maven-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+        <sonar-maven-plugin.version>3.6.0.1398</sonar-maven-plugin.version>
 
     </properties>
 
     <dependencies>
 
         <!-- COMMON LIBS (Log4J2 & Vavr) -->
+	<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>${commons-math3.version}</version>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>${log4j-slf4j-impl.version}</version>
             <optional>true</optional>
         </dependency>
-       
-	<dependency>
-   	    <groupId>org.apache.commons</groupId>
-  	    <artifactId>commons-math3</artifactId>
- 	    <version>3.6.1</version>
- 	</dependency>
-
-        <!-- CODE GENERATION (Lombok & CheckerFramework) -->
         
+	<!-- CODE GENERATION (Lombok & CheckerFramework) -->
+      
         <!-- TEST (JUnit 5 & Mockito) -->
-
+      
     </dependencies>
 
     <build>
@@ -167,7 +168,7 @@
                 <artifactId>versions-maven-plugin</artifactId>
                 <configuration>
                     <generateBackupPoms>false</generateBackupPoms>
-                    <rulesUri>file://${project.basedir}/maven-version-rules.xml</rulesUri>
+                    <!--rulesUri>file://${project.basedir}/maven-version-rules.xml</rulesUri-->
                 </configuration>
             </plugin>
 
