--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,19 @@
     <build>
 
         <plugins>
+		<plugin>
+			<groupId>com.github.spotbugs</groupId>
+			<artifactId>spotbugs-maven-plugin</artifactId>
+			<version>3.1.11</version>
+			<dependencies>
+				<!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
+				<dependency>
+					<groupId>com.github.spotbugs</groupId>
+					<artifactId>spotbugs</artifactId>
+					<version>3.1.12</version>
+				</dependency>
+			</dependencies>
+		</plugin>
 
             <!-- COMPILER (Java10+ and lombok compatible) -->
             <plugin>
