подключена проверка на ошибки pmd

--- a/pom.xml
+++ b/pom.xml
@@ -173,5 +173,12 @@
         </plugins>
 
     </build>
+	<reporting>
+		<plugins>
+			<plugin>
+				<artifactId>maven-pmd-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</reporting>
 
 </project>
